--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -19,7 +19,7 @@ body {
 
 .a{
   min-width: 100%;
-  min-height: 10rem;
+  min-height: 25rem;
   border: 1px solid gray;
   background-color: lightgray;
   border-radius: .3rem;
@@ -41,15 +41,15 @@ body {
 
 .h{
   min-width: 100%;
-  min-height: 37rem;
+  min-height: 49rem;
   border: 1px solid gray;
   background-color: lightgray;
   border-radius: .3rem;
 }
 
 /*desktop view*/
-@media screen and (min-width: 600px){
-  /*.container {
+@media screen and (min-width: 1000px){
+  .container {
     display: flex;
     flex-wrap: wrap;
   }
@@ -60,13 +60,14 @@ body {
   .e,
   .f,
   .g {
-    min-width: 15rem;
-    min-height: 15rem;
+    min-width: 30rem;
+    min-height: 30rem;
   }
 
   .h {
-    min-width: 10rem;
-    min-height: 10rem;
-  }*/
+    min-width: 20rem;
+    min-height: 20rem;
+    margin: -31rem 0 0 0;
+  }
 
 }
